--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,7 @@
 }
 
 .custom-max-width {
-  @apply max-w-[540px] md:max-w-[720px] lg:max-w-[960px] xl:max-w-[1140px];
+  @apply w-[540px] md:w-[720px] lg:w-[960px] xl:w-[1140px];
   margin-left: auto;
   margin-right: auto;
 }
