--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,7 @@
 }
 
 .custom-max-width {
-  @apply w-[480] sm:w-[540px] md:w-[720px] lg:w-[960px] xl:w-[1140px];
+  @apply w-[360px] xs:w-[480px] sm:w-[540px] md:w-[720px] lg:w-[960px] xl:w-[1140px];
   margin-left: auto;
   margin-right: auto;
 }
